# cpp-blueprint

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp
src/: main.cpp
tests/: mainTest.cpp
